--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,6 @@
     box-sizing: border-box;
 }
 
-/* COMMON */
-
-/* END COMMON */
-
 .wrapper{
     width: 100%;
     height: 100vh;
@@ -59,34 +55,28 @@ main{
     align-content: flex-start;
 }
 
-.square-facile {
-    width: calc(100% / 10);
-    height: calc(100% / 10);
+.square {
     border: 2px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.square-medio {
-    width: calc(100% / 8);
-    height: calc(100% / 8);
-    border: 2px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.square-difficile {
-    width: calc(100% / 8);
-    height: calc(100% / 8);
-    border: 2px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    cursor: pointer;
 }
 
 .active{
     background-color: #6495ed;
     color: white;
 }
+
+/* COMMON */
+
+.hidden{
+    display: none;
+}
+
+.active{
+    background-color: #6495ed;
+    color: white;
+}
+
+/* END COMMON */
